# schedule-generator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  defs.h  input.c  main.c  parse.c  schedule.c
src/test/: input_test.c  parse_test.c  schedule_test.c  test.c
